--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+  <%= render 'books/book_user_info',user: @user,book: @new_book %>
+
+    <div class="col-md-8 offset-md-1">
+        <h2>Book detail</h2>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td><%= link_to user_path(@book.user) do %>
+                  <%= attachment_image_tag @book.user, :profile_image, format: 'jpeg', fallback:'img/no_image.jpg', size: "40x40" %><br>
+                  <%= @book.user.name %>
+                  <% end %></td>
+              <td><%= link_to @book.title,book_path(@book) %></td>
+              <td><%= @book.body %></td>
+                <% if @book.user == current_user %>
+                  <td><%=link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %></td>
+                  <td><%= link_to "Destroy", book_path(@book), class:"btn btn-sm btn-danger", method: :delete,data: {confirm: "削除しますか？"} %></td>
+                <% end %>
+            </tr>
+          </tbody>
+        </table>
+
+    </div>
+  </div>
+</div>
