--- a/app/views/books/_book_user_info.html.erb
+++ b/app/views/books/_book_user_info.html.erb
@@ -1,6 +1,13 @@
 <% if flash[:notice] %>
   <p><%= flash[:notice] %></p>
 <% end %>
+
+<% if book.errors.any? %>
+ <%= book.errors.count %>error
+ <% book.errors.full_messages.each do |message| %>
+   <%= message %>
+ <% end %>
+<% end %>
   <div class="container px-5 px-sm-0 mt-3">
    <div class="row">
      <div class="col-md-3">
