--- a/app/views/books/_book_user_info.html.erb
+++ b/app/views/books/_book_user_info.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% if book.errors.any? %>
- <%= book.errors.count %>error
+ <%= pluralize(book.errors.count, "error") %>
  <% book.errors.full_messages.each do |message| %>
    <%= message %>
  <% end %>
@@ -30,7 +30,7 @@
          <i class="fas fa-user-cog"></i>
         <% end %>
        </div>
-  
+
        <h2 class="mt-3">New book</h2>
        <%= form_with model:book,local:true do |f| %>
         <div class="form-group">
