--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,13 +14,17 @@
       <tbody>
        <% @books.each do |book| %>
          <tr>
-          <th><%= link_to user_path(book.id) do %>
-               <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback:'img/no_image.jpg', size: "40x40" %>
-              <% end %></th>
-          <th><%= link_to book.title,book_path(book) %></th>
-          <th><%= book.body %></th>
-        <% end %>
-       </tr>
+          <td>
+           <%= link_to user_path(book.id) do %>
+             <%= attachment_image_tag book.user, :profile_image, format: 'jpeg', fallback:'img/no_image.jpg', size: "40x40" %>
+           <% end %>
+          </td>
+          <td><%= link_to book.title,book_path(book) %></td>
+          <td><%= book.body %></td>
+          <td>コメント数:<%= book.book_comments.count %></td>
+         </tr>
+       <% end %>
+
       </tbody>
      </table>
     </div>
