--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,6 +11,7 @@
                   <% end %></td>
               <td><%= link_to @book.title,book_path(@book) %></td>
               <td><%= @book.body %></td>
+              <td> コメント数:<%= @book.book_comments.count %></td>
                 <% if @book.user == current_user %>
                   <td><%=link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %></td>
                   <td><%= link_to "Destroy", book_path(@book), class:"btn btn-sm btn-danger", method: :delete,data: {confirm: "削除しますか？"} %></td>
@@ -18,7 +19,8 @@
             </tr>
           </tbody>
         </table>
-
+      <%= render 'books/comment_index', book: @book %>
+      <%= render 'books/comment_form', book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
