--- a/app/views/book_comments/_comment_index.html.erb
+++ b/app/views/book_comments/_comment_index.html.erb
@@ -17,7 +17,7 @@
               <% end %>
           </td>
           <td><%= book_comment.comment %></td>
-          <td><%= link_to "Destroy", book_book_comment_path(book_comment), class:"btn btn-sm btn-danger", method: :delete %></td>
+          <td><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), class:"btn btn-sm btn-danger", method: :delete %></td>
       </tr>
         <% end %>
     </tbody>
