--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,6 +11,7 @@
                   <% end %></td>
               <td><%= link_to @book.title,book_path(@book) %></td>
               <td><%= @book.body %></td>
+              <td><%= render 'favorites/favorite', book: @book %></td>
               <td> コメント数:<%= @book.book_comments.count %></td>
                 <% if @book.user == current_user %>
                   <td><%=link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %></td>
@@ -19,8 +20,8 @@
             </tr>
           </tbody>
         </table>
-      <%= render 'books/comment_index', book: @book %>
-      <%= render 'books/comment_form', book: @book, book_comment: @book_comment %>
+        <%= render 'book_comments/comment_index', book: @book %>
+        <%= render 'book_comments/comment_form', book: @book, book_comment: @book_comment %>
     </div>
   </div>
 </div>
