--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,6 +15,17 @@
           <tr>
             <td><%= attachment_image_tag user, :profile_image, format: 'jpeg', fallback:'img/no_image.jpg', size: "40x40" %></td>
             <td><%= user.name %></td>
+            <td>フォロー数:<%= user.followings.count%></td>
+            <td>フォロワー数:<%= user.followers.count%></td>
+            <td>
+              <% unless user = current_user %>
+                 <% if current_user.following?(user) %>
+                    <%= link_to "フォロー外す", user_relationships_path(user_id), method: :delete %>
+                 <% else %>
+                    <%= link_to "フォローする", user_relationships_path(user_id), metod: :post %>
+                 <% end %>
+              <% end %>
+            </td>
             <td><%= link_to"Show",user_path(user) %></td>
           </tr>
           <% end %>
