--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,11 +18,11 @@
             <td>フォロー数:<%= user.followings.count%></td>
             <td>フォロワー数:<%= user.followers.count%></td>
             <td>
-              <% unless user = current_user %>
+              <% unless user == current_user %>
                  <% if current_user.following?(user) %>
-                    <%= link_to "フォロー外す", user_relationships_path(user_id), method: :delete %>
+                    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
                  <% else %>
-                    <%= link_to "フォローする", user_relationships_path(user_id), metod: :post %>
+                    <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
                  <% end %>
               <% end %>
             </td>
